project (iodk)
cmake_minimum_required (VERSION 2.6)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_STATIC_LIBRARY_PREFX "lib")

find_package (ACE REQUIRED)
# when ACE not found and passed by user ${ACE_FOUND} is still false
if (NOT ${ACE_FOUND})
	set (ACE_INCLUDE_DIR "NOT_FOUND" CACHE PATH "ACE_wrappers directory")
	set (ACE_LIBRARY_DEBUG "NOT_FOUND" CACHE FILEPATH "ACE library")
    set (ACE_LIBRARY_RELEASE "NOT_FOUND" CACHE FILEPATH "ACE library")
endif ()
set (ACEWIN32EXE "")

if (${CMAKE_SYSTEM_NAME} MATCHES "WindowsCE")
	message ("TARGET OS: WINDOWSCE")
	add_definitions (-DWINCE -DUNICODE -D_UNICODE)
	set (ACEWIN32EXE "WIN32")
endif()

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    message ("TARGET OS: LINUX")
    add_definitions (-DACE_LNX)
    set (ACE_LIBRARY_DEBUG "ACE")
    set (ACE_LIBRARY_RELEASE "ACE")
endif ()

set (DRIVERS_DIR "${CMAKE_SOURCE_DIR}/Drivers")
include_directories (${ACE_INCLUDE_DIR} "${CMAKE_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/IsaSys" "${CMAKE_SOURCE_DIR}/IsaKer" )

link_directories (${ACE_LIBRARIES})

macro(list_subdirectories retval curdir return_relative)
message (STATUS "CURDIR " ${curdir})
  #file(GLOB subdir RELATIVE ${CMAKE_SOURCE_DIR} ${curdir}/*)
  file(GLOB subdir RELATIVE ${curdir} ${curdir}/*)
  message (STATUS ${subdir})
  set(list_of_dirs "")
  foreach(dir ${subdir})
	message(STATUS "DIR: " ${dir} " CDD: " ${curdir}/${dir})
    if(IS_DIRECTORY ${curdir}/${dir})
      if (${return_relative})
        set(list_of_dirs  ${dir} ${list_of_dirs})
		message (STATUS "lod1 : " ${list_of_dirs})
      else()
        set(list_of_dirs ${curdir}/${dir} ${list_of_dirs} )
		message (STATUS "lod2 : " ${list_of_dirs})
      endif()
    endif()
  endforeach()
  set(${retval} ${list_of_dirs})
endmacro()

macro(filter_subdirectories retval curdir return_relative filterfile)
#message (STATUS "FIL " ${filter})
#foreach (str ${filter})
#	message (STATUS "FILTERin: " ${str} "\n")
#endforeach()
message ( "CURDIR " ${curdir})
  #file(GLOB subdir RELATIVE ${CMAKE_SOURCE_DIR} ${curdir}/*)
  file(GLOB subdir RELATIVE ${curdir} ${curdir}/*)
  message ("subdir:" ${subdir})
  set(list_of_dirs "")

set (filter "")
file (STRINGS ${filterfile} filter REGEX "^[^#]")

  foreach(dir ${filter})
    if(IS_DIRECTORY ${curdir}/${dir})
	  set (filtered -1)
	  list (FIND filter "${dir}" filtered)
	  message (STATUS "filtered : " ${filtered} " dir:" "${dir}")
	  if (${filtered} EQUAL -1)
		message (STATUS "FILTER OUT\n")
	  else()
		if (${return_relative})
          set(list_of_dirs ${list_of_dirs} ${dir})
		  #message (STATUS "lod1 : " ${list_of_dirs})
        else()
          set(list_of_dirs ${list_of_dirs} ${curdir}/${dir})
		  #message (STATUS "lod2 : " ${list_of_dirs})
        endif()
	  endif()
    endif()
  endforeach()
  set(${retval} ${list_of_dirs})
endmacro()

set (FILTER_LIST "")
file (STRINGS "${CMAKE_SOURCE_DIR}/Drivers/drvlist" FILTER_LIST REGEX "^[^#]")
foreach (str ${FILTER_LIST})
	message (STATUS "FIL: " ${str} "\n" "source dir is" ${CMAKE_SOURCE_DIR})
endforeach()

set (LIST_RET "${CMAKE_SOURCE_DIR}/Drivers")
#list_subdirectories ( LIST_RET  "${CMAKE_SOURCE_DIR}/Drivers" 1)
message (STATUS "FILTER_FULL: " ${FILTER_LIST} "\n")
filter_subdirectories ( LIST_RET "${CMAKE_SOURCE_DIR}/Drivers" 1 "${CMAKE_SOURCE_DIR}/Drivers/drvlist" )
message (STATUS "LIST: " ${LIST_RET})

file (WRITE "${CMAKE_SOURCE_DIR}/Drivers/Drivers.h" "")
foreach (drv ${LIST_RET})
	message (STATUS "drv: " ${drv})
	file (APPEND "${CMAKE_SOURCE_DIR}/Drivers/Drivers.h"  "#include \"${drv}/pack_${drv}.h\" \n")
endforeach()
file (APPEND "${CMAKE_SOURCE_DIR}/Drivers/Drivers.h" "#define ISA_DECLARE_DRIVERS ")
foreach (drv ${LIST_RET})
	string (TOUPPER ${drv} drv)
	file (APPEND "${CMAKE_SOURCE_DIR}/Drivers/Drivers.h"  "ISA_DECLARE_PACK_${drv} ")
endforeach()

add_definitions (-D_CRT_SECURE_NO_WARNINGS)

set (LICENSE_LIBS "")
include (${CMAKE_SOURCE_DIR}/licenselibs.cmake OPTIONAL)

set(BASE ${CMAKE_SOURCE_DIR}/base.tdb)

set (DRVLIB "")
set (TDB "")

set(DRIVERSTDB ${CMAKE_SOURCE_DIR}/Drivers/drivers.tdb)
file(WRITE ${DRIVERSTDB} "")

foreach (drv ${LIST_RET})
 set (CURDRV ${drv})
 set (DRVLIB ${DRVLIB} "${drv}")
 file(READ ${CMAKE_SOURCE_DIR}/Drivers/${drv}/${drv}.tdb TDB)
 file(APPEND ${DRIVERSTDB} "${TDB}")
 add_subdirectory(${CMAKE_SOURCE_DIR}/Drivers/${drv})
endforeach()
#add_subdirectory(Drivers/testdrv)

set(FINALTDB ${CMAKE_BINARY_DIR}/AceLarge.tdb)
file(READ ${BASE} TDB)
file(WRITE ${FINALTDB} "${TDB}")
file(READ ${DRIVERSTDB} TDB)
file(APPEND ${FINALTDB} "${TDB}")

add_subdirectory(IsaVm)
